# ndeq

./: Cargo.toml  README.md
example_pkgs/sample/: Cargo.toml
example_pkgs/sample/src/: main.rs  ndeq_work.rs  net.rs  net_binder.rs  node.rs  sample.rs
examples/sample/: main.rs  network.rs  node.rs  sample.rs
examples/sample/plotters_util/: point_marker.rs
src/: diffusion_sim.rs  lib.rs  ndeq_net.rs  ndeq_node.rs  ndeq_runner.rs  ndeq_sim.rs  net_view.rs  node_view.rs  prelude.rs  step_algorithm.rs  util.rs
src/diffusers/: diffuser.rs  euler.rs  mod.rs  runge_kutta.rs
src/diffusion_sims/: euler.rs  mod.rs  runge_kutta.rs
src/linalg/: matrix.rs  mod.rs
src/linalg/parts/: matc.rs  mdata.rs  mod.rs  scalar.rs  types.rs
src/linalg_tests/: matrix.rs  mod.rs  sample.rs
src/linear/: matrix.rs  mod.rs  scalar.rs  tests.rs
src/linear/mds/: matc.rs  mdata.rs  mod.rs
src/net_ode/: mod.rs  ndeq_sim.rs
src/net_ode/solver/: ei_solver.rs  mod.rs  net_ode_solver.rs
src/net_parts/: mod.rs  ndeq_net.rs  ndeq_node.rs  net.rs  node.rs
src/ode/: mod.rs  ode_util.rs  slope.rs  yp.rs
src/ode/df/: flat.rs  mod.rs  yp.rs
src/ode/solver/: euler.rs  gp_ode_solver.rs  mod.rs  ode_solver.rs  runge_kutta.rs  ss_ode_solver.rs
src/ode/values/: float.rs  float_approx.rs  mod.rs  rf32.rs  time.rs  value.rs  varr.rs
src/parts/: mod.rs  ndeq_net.rs  ndeq_node.rs  net_view.rs  node_view.rs
src/step_algorithms/: euler.rs  explicit_euler.rs  mod.rs  runge_kutta.rs
src/util/: mod.rs  time_util.rs  work_on.rs
src/values/: mod.rs  time.rs  value.rs
(+11 files in other folders)
