[workspace]
members = ["example_pkgs/*"]

[workspace.package]
authors = ["Nossie531"]
edition = "2024"
repository = "https://github.com/nossie531/ndeq"
license = "MIT OR Apache-2.0"

[package]
name = "ndeq"
version = "0.1.0"
description = "Network diffusion simulator."
keywords = ["diffusion equation", "network"]
categories = ["science", "simulation"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
